# UDConverterFanFork

./: .gitignore  .python-version  README.md  pyproject.toml
scripts/: convert.py
src/udconverter/: __main__.py
src/udconverter/logic/: depender.py  features.py
src/udconverter/static/: re_constants.py
src/udconverter/structures/: graphs.py  trees.py
src/udconverter/utils/: conversion.py  dg_utils.py  joiners.py  ppche_processing.py  processing_scripts.py  reader.py  tools.py
